Fix footer z-index
for blob text bubble overlapping

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -361,6 +361,7 @@ div.footer {
 
 .footer {
 	padding: 10px;
+	z-index: -1;
 }
 
 .footer a {
